Fix Nav Height Issue - Fix Social Links Spacing

--- a/styles2.css
+++ b/styles2.css
@@ -25,7 +25,7 @@ nav{
 	background-color: #9A969C;
 	border-right:solid #3E3544 4px;
 	float:left;
-	height:1779px;
+	height:1500px;
 	width:20%;
 }
 
@@ -184,7 +184,7 @@ footer{
 
 #top-right-img{
 	position: absolute;
-  left: 93%;
+  left: 92%;
   margin-top: 3.5em;
 }
 
@@ -196,7 +196,7 @@ footer{
 
 #bottom-right-img{
 	position: absolute;
-  left: 93.5%;
+  left: 92%;
   margin-top: 7em;
 }
 
@@ -209,7 +209,7 @@ footer{
 #footer-text{
 	font-size: 1.5em;
   font-weight: 700;
-  left: 58%;
+  left: 62%;
   margin-top: 2em;
   position: absolute;
 }
@@ -218,6 +218,10 @@ footer{
 	h2{
 		margin: 1em 0;
     width: 100%;
+	}
+
+	nav{
+		height: 2226px;
 	}
 
 	.dog-img{
@@ -232,7 +236,7 @@ footer{
 
 	.dog-p{
 		float: none;
-    width: 75%;
+    width: 100%;
     margin: 2em auto;
     text-align: center;
 	}
@@ -264,7 +268,7 @@ footer{
 	}
 }
 
-@media only screen and (max-width: 945px){
+@media only screen and (max-width: 1090px){
 	#footer-text{
 		position: inherit;
     margin: 0;
